--- a/HovyFridge.Api/HovyFridge.Api.csproj
+++ b/HovyFridge.Api/HovyFridge.Api.csproj
@@ -7,7 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.2" />
+        <PackageReference Include="NReco.Logging.File" Version="1.1.4" />
+        <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Workers\" />
     </ItemGroup>
 
 </Project>
