--- a/HovyFridge.Api/appsettings.Development.json
+++ b/HovyFridge.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionMysqlMariaDbVersion": "10.4.21",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=hovyNotes;user=root;password="
+  },
+  "AppConfiguration": {
+
   }
 }
