--- a/HovyFridge.Api/appsettings.json
+++ b/HovyFridge.Api/appsettings.json
@@ -1,9 +1,23 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "Path": "app.log",
+      "Append": true,
+      "MinLevel": "Information",
+      "FileSizeLimitBytes": 0,
+      "MaxRollingFiles": 0
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionMysqlMariaDbVersion": "10.4.21",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=hovyNotes;user=root;password="
+  },
+  "AppConfiguration": {
+
+  }
 }
