--- a/HovyFridge.Api/appsettings.json
+++ b/HovyFridge.Api/appsettings.json
@@ -15,7 +15,7 @@
   },
   "ConnectionMysqlMariaDbVersion": "10.4.21",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=hovyNotes;user=root;password="
+    "DefaultConnection": "server=localhost;port=3306;database=hovyFridge;user=root;password="
   },
   "AppConfiguration": {
 
