--- a/HovyFridge/app/src/main/AndroidManifest.xml
+++ b/HovyFridge/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 
-
     <application
         android:name="com.niklyadov.hovyfridge.App"
         android:allowBackup="true"
@@ -21,10 +20,9 @@
         android:theme="@style/Theme.HovyFridge">
         <activity
             android:name="com.niklyadov.hovyfridge.ui.MainActivity"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
