--- a/HovyFridge/app/src/main/AndroidManifest.xml
+++ b/HovyFridge/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.HovyFridge">
         <activity
             android:name="com.niklyadov.hovyfridge.ui.MainActivity"
