--- a/HovyFridge/app/src/main/AndroidManifest.xml
+++ b/HovyFridge/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="28"/>
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 
     <application
@@ -20,7 +22,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.HovyFridge">
         <activity
-            android:name="com.niklyadov.hovyfridge.ui.MainActivity"
+            android:name="com.niklyadov.hovyfridge.presentation.ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
