--- a/HovyFridge/app/build.gradle
+++ b/HovyFridge/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.3.2'
+
     implementation 'com.google.dagger:hilt-android:2.38.1'
     implementation 'androidx.preference:preference:1.1.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
