--- a/HovyFridge.Web/HovyFridge.Api/HovyFridge.Api.csproj
+++ b/HovyFridge.Web/HovyFridge.Api/HovyFridge.Api.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 	  <PackageReference Include="FluentResults" Version="3.5.0" />
 	  <PackageReference Include="FluentResults.Extensions.FluentAssertions" Version="1.1.0" />
-	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
+	  <!--PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" /-->
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
 		  <PrivateAssets>all</PrivateAssets>
