api: upload suggestions and stored function

--- a/HovyFridge.Web/HovyFridge.Api/appsettings.json
+++ b/HovyFridge.Web/HovyFridge.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
   "Kestrel": {
+    "Limits": {
+      "MaxRequestBodySize": 1073741824
+    },
     "EndPoints": {
       "Http": {
         "Url": "http://0.0.0.0:6700"
