--- a/HovyFridge.Web/HovyFridge.Api/HovyFridge.Api.csproj
+++ b/HovyFridge.Web/HovyFridge.Api/HovyFridge.Api.csproj
@@ -19,6 +19,7 @@
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.4" />
+	  <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
 </Project>
