web: base url in config

--- a/HovyFridge.Web/HovyFridge.Web/appsettings.json
+++ b/HovyFridge.Web/HovyFridge.Web/appsettings.json
@@ -15,7 +15,7 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "TelegramBot": {
-      "Url": "http://hovyfridge.io:6800/",
+      "BaseUrl": "http://hovyfridge.io:6800/",
       "Token": ""
     }
   },
