--- a/HovyFridge.Web/HovyFridge.Tests/HovyFridge.Tests.csproj
+++ b/HovyFridge.Web/HovyFridge.Tests/HovyFridge.Tests.csproj
@@ -8,10 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HovyFridge.Api\HovyFridge.Api.csproj" />
+    <ProjectReference Include="..\HovyFridge.DAO\HovyFridge.DAO.csproj" />
+    <ProjectReference Include="..\HovyFridge.GenericRepository\HovyFridge.GenericRepository.csproj" />
+    <ProjectReference Include="..\HovyFridge.QueryBuilder\HovyFridge.QueryBuilder.csproj" />
+    <ProjectReference Include="..\HovyFridge\HovyFridge.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ServicesTests\Users\" />
+    <Folder Include="ServicesTests\ShoppingLists\" />
+    <Folder Include="ServicesTests\Recipes\" />
+    <Folder Include="ServicesTests\ProductSuggestions\" />
+    <Folder Include="ServicesTests\FridgeAccessLevels\" />
   </ItemGroup>
 
 </Project>
